345 (2)/y.output
Grammar

    0 $accept: rule_insn64slot1 $end

    1 rule_reg_all: tok_183
    2             | tok_187
    3             | tok_191
    4             | tok_195
    5             | tok_199
    6             | tok_203
    7             | tok_207
    8             | tok_211
    9             | tok_215
   10             | tok_219
   11             | tok_223
   12             | tok_228
   13             | tok_233
   14             | tok_238
   15             | tok_243
   16             | tok_248
   17             | tok_144
   18             | tok_148
   19             | tok_152
   20             | tok_156
   21             | tok_160
   22             | tok_164
   23             | tok_168
   24             | tok_172
   25             | tok_261
   26             | tok_265
   27             | tok_269
   28             | tok_273
   29             | tok_285
   30             | tok_289
   31             | tok_293
   32             | tok_297
   33             | tok_309
   34             | tok_313
   35             | tok_317
   36             | tok_321
   37             | tok_332
   38             | tok_336
   39             | tok_340
   40             | tok_344

   41 rule_insn64slot1_mov: tok_706 rule_reg_all tok_1066 rule_reg_all

   42 rule_insn64slot1_nop: tok_1026

   43 rule_insn64slot1_others_iterm: tok_510
   44                              | tok_514
   45                              | tok_519
   46                              | tok_523
   47                              | tok_527
   48                              | tok_532
   49                              | tok_537
   50                              | tok_543
   51                              | tok_548
   52                              | tok_572
   53                              | tok_577
   54                              | tok_582
   55                              | tok_587
   56                              | tok_592
   57                              | tok_598
   58                              | tok_604
   59                              | tok_609
   60                              | tok_614
   61                              | tok_619
   62                              | tok_624
   63                              | tok_629
   64                              | tok_655
   65                              | tok_659
   66                              | tok_662
   67                              | tok_666
   68                              | tok_670
   69                              | tok_674
   70                              | tok_678
   71                              | tok_683
   72                              | tok_750
   73                              | tok_755
   74                              | tok_760
   75                              | tok_765

   76 rule_reg_acc: tok_261
   77             | tok_265
   78             | tok_269
   79             | tok_273

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm rule_reg_acc tok_1066 rule_reg_all tok_1066 rule_reg_all

   81 rule_insn64slot1: rule_insn64slot1_mov
   82                 | rule_insn64slot1_others
   83                 | rule_insn64slot1_nop


Terminals, with rules where they appear

$end (0) 0
error (256)
tok_183 (258) 1
tok_187 (259) 2
tok_191 (260) 3
tok_195 (261) 4
tok_199 (262) 5
tok_203 (263) 6
tok_207 (264) 7
tok_211 (265) 8
tok_215 (266) 9
tok_219 (267) 10
tok_223 (268) 11
tok_228 (269) 12
tok_233 (270) 13
tok_238 (271) 14
tok_243 (272) 15
tok_248 (273) 16
tok_144 (274) 17
tok_148 (275) 18
tok_152 (276) 19
tok_156 (277) 20
tok_160 (278) 21
tok_164 (279) 22
tok_168 (280) 23
tok_172 (281) 24
tok_261 (282) 25 76
tok_265 (283) 26 77
tok_269 (284) 27 78
tok_273 (285) 28 79
tok_285 (286) 29
tok_289 (287) 30
tok_293 (288) 31
tok_297 (289) 32
tok_309 (290) 33
tok_313 (291) 34
tok_317 (292) 35
tok_321 (293) 36
tok_332 (294) 37
tok_336 (295) 38
tok_340 (296) 39
tok_344 (297) 40
tok_706 (298) 41
tok_1066 (299) 41 80
tok_1026 (300) 42
tok_510 (301) 43
tok_514 (302) 44
tok_519 (303) 45
tok_523 (304) 46
tok_527 (305) 47
tok_532 (306) 48
tok_537 (307) 49
tok_543 (308) 50
tok_548 (309) 51
tok_572 (310) 52
tok_577 (311) 53
tok_582 (312) 54
tok_587 (313) 55
tok_592 (314) 56
tok_598 (315) 57
tok_604 (316) 58
tok_609 (317) 59
tok_614 (318) 60
tok_619 (319) 61
tok_624 (320) 62
tok_629 (321) 63
tok_655 (322) 64
tok_659 (323) 65
tok_662 (324) 66
tok_666 (325) 67
tok_670 (326) 68
tok_674 (327) 69
tok_678 (328) 70
tok_683 (329) 71
tok_750 (330) 72
tok_755 (331) 73
tok_760 (332) 74
tok_765 (333) 75


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
rule_reg_all (80)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40, on right:
    41 80
rule_insn64slot1_mov (81)
    on left: 41, on right: 81
rule_insn64slot1_nop (82)
    on left: 42, on right: 83
rule_insn64slot1_others_iterm (83)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right: 80
rule_reg_acc (84)
    on left: 76 77 78 79, on right: 80
rule_insn64slot1_others (85)
    on left: 80, on right: 82
rule_insn64slot1 (86)
    on left: 81 82 83, on right: 0


state 0

    0 $accept: . rule_insn64slot1 $end

    tok_706   shift, and go to state 1
    tok_1026  shift, and go to state 2
    tok_510   shift, and go to state 3
    tok_514   shift, and go to state 4
    tok_519   shift, and go to state 5
    tok_523   shift, and go to state 6
    tok_527   shift, and go to state 7
    tok_532   shift, and go to state 8
    tok_537   shift, and go to state 9
    tok_543   shift, and go to state 10
    tok_548   shift, and go to state 11
    tok_572   shift, and go to state 12
    tok_577   shift, and go to state 13
    tok_582   shift, and go to state 14
    tok_587   shift, and go to state 15
    tok_592   shift, and go to state 16
    tok_598   shift, and go to state 17
    tok_604   shift, and go to state 18
    tok_609   shift, and go to state 19
    tok_614   shift, and go to state 20
    tok_619   shift, and go to state 21
    tok_624   shift, and go to state 22
    tok_629   shift, and go to state 23
    tok_655   shift, and go to state 24
    tok_659   shift, and go to state 25
    tok_662   shift, and go to state 26
    tok_666   shift, and go to state 27
    tok_670   shift, and go to state 28
    tok_674   shift, and go to state 29
    tok_678   shift, and go to state 30
    tok_683   shift, and go to state 31
    tok_750   shift, and go to state 32
    tok_755   shift, and go to state 33
    tok_760   shift, and go to state 34
    tok_765   shift, and go to state 35

    rule_insn64slot1_mov           go to state 36
    rule_insn64slot1_nop           go to state 37
    rule_insn64slot1_others_iterm  go to state 38
    rule_insn64slot1_others        go to state 39
    rule_insn64slot1               go to state 40


state 1

   41 rule_insn64slot1_mov: tok_706 . rule_reg_all tok_1066 rule_reg_all

    tok_183  shift, and go to state 41
    tok_187  shift, and go to state 42
    tok_191  shift, and go to state 43
    tok_195  shift, and go to state 44
    tok_199  shift, and go to state 45
    tok_203  shift, and go to state 46
    tok_207  shift, and go to state 47
    tok_211  shift, and go to state 48
    tok_215  shift, and go to state 49
    tok_219  shift, and go to state 50
    tok_223  shift, and go to state 51
    tok_228  shift, and go to state 52
    tok_233  shift, and go to state 53
    tok_238  shift, and go to state 54
    tok_243  shift, and go to state 55
    tok_248  shift, and go to state 56
    tok_144  shift, and go to state 57
    tok_148  shift, and go to state 58
    tok_152  shift, and go to state 59
    tok_156  shift, and go to state 60
    tok_160  shift, and go to state 61
    tok_164  shift, and go to state 62
    tok_168  shift, and go to state 63
    tok_172  shift, and go to state 64
    tok_261  shift, and go to state 65
    tok_265  shift, and go to state 66
    tok_269  shift, and go to state 67
    tok_273  shift, and go to state 68
    tok_285  shift, and go to state 69
    tok_289  shift, and go to state 70
    tok_293  shift, and go to state 71
    tok_297  shift, and go to state 72
    tok_309  shift, and go to state 73
    tok_313  shift, and go to state 74
    tok_317  shift, and go to state 75
    tok_321  shift, and go to state 76
    tok_332  shift, and go to state 77
    tok_336  shift, and go to state 78
    tok_340  shift, and go to state 79
    tok_344  shift, and go to state 80

    rule_reg_all  go to state 81


state 2

   42 rule_insn64slot1_nop: tok_1026 .

    $default  reduce using rule 42 (rule_insn64slot1_nop)


state 3

   43 rule_insn64slot1_others_iterm: tok_510 .

    $default  reduce using rule 43 (rule_insn64slot1_others_iterm)


state 4

   44 rule_insn64slot1_others_iterm: tok_514 .

    $default  reduce using rule 44 (rule_insn64slot1_others_iterm)


state 5

   45 rule_insn64slot1_others_iterm: tok_519 .

    $default  reduce using rule 45 (rule_insn64slot1_others_iterm)


state 6

   46 rule_insn64slot1_others_iterm: tok_523 .

    $default  reduce using rule 46 (rule_insn64slot1_others_iterm)


state 7

   47 rule_insn64slot1_others_iterm: tok_527 .

    $default  reduce using rule 47 (rule_insn64slot1_others_iterm)


state 8

   48 rule_insn64slot1_others_iterm: tok_532 .

    $default  reduce using rule 48 (rule_insn64slot1_others_iterm)


state 9

   49 rule_insn64slot1_others_iterm: tok_537 .

    $default  reduce using rule 49 (rule_insn64slot1_others_iterm)


state 10

   50 rule_insn64slot1_others_iterm: tok_543 .

    $default  reduce using rule 50 (rule_insn64slot1_others_iterm)


state 11

   51 rule_insn64slot1_others_iterm: tok_548 .

    $default  reduce using rule 51 (rule_insn64slot1_others_iterm)


state 12

   52 rule_insn64slot1_others_iterm: tok_572 .

    $default  reduce using rule 52 (rule_insn64slot1_others_iterm)


state 13

   53 rule_insn64slot1_others_iterm: tok_577 .

    $default  reduce using rule 53 (rule_insn64slot1_others_iterm)


state 14

   54 rule_insn64slot1_others_iterm: tok_582 .

    $default  reduce using rule 54 (rule_insn64slot1_others_iterm)


state 15

   55 rule_insn64slot1_others_iterm: tok_587 .

    $default  reduce using rule 55 (rule_insn64slot1_others_iterm)


state 16

   56 rule_insn64slot1_others_iterm: tok_592 .

    $default  reduce using rule 56 (rule_insn64slot1_others_iterm)


state 17

   57 rule_insn64slot1_others_iterm: tok_598 .

    $default  reduce using rule 57 (rule_insn64slot1_others_iterm)


state 18

   58 rule_insn64slot1_others_iterm: tok_604 .

    $default  reduce using rule 58 (rule_insn64slot1_others_iterm)


state 19

   59 rule_insn64slot1_others_iterm: tok_609 .

    $default  reduce using rule 59 (rule_insn64slot1_others_iterm)


state 20

   60 rule_insn64slot1_others_iterm: tok_614 .

    $default  reduce using rule 60 (rule_insn64slot1_others_iterm)


state 21

   61 rule_insn64slot1_others_iterm: tok_619 .

    $default  reduce using rule 61 (rule_insn64slot1_others_iterm)


state 22

   62 rule_insn64slot1_others_iterm: tok_624 .

    $default  reduce using rule 62 (rule_insn64slot1_others_iterm)


state 23

   63 rule_insn64slot1_others_iterm: tok_629 .

    $default  reduce using rule 63 (rule_insn64slot1_others_iterm)


state 24

   64 rule_insn64slot1_others_iterm: tok_655 .

    $default  reduce using rule 64 (rule_insn64slot1_others_iterm)


state 25

   65 rule_insn64slot1_others_iterm: tok_659 .

    $default  reduce using rule 65 (rule_insn64slot1_others_iterm)


state 26

   66 rule_insn64slot1_others_iterm: tok_662 .

    $default  reduce using rule 66 (rule_insn64slot1_others_iterm)


state 27

   67 rule_insn64slot1_others_iterm: tok_666 .

    $default  reduce using rule 67 (rule_insn64slot1_others_iterm)


state 28

   68 rule_insn64slot1_others_iterm: tok_670 .

    $default  reduce using rule 68 (rule_insn64slot1_others_iterm)


state 29

   69 rule_insn64slot1_others_iterm: tok_674 .

    $default  reduce using rule 69 (rule_insn64slot1_others_iterm)


state 30

   70 rule_insn64slot1_others_iterm: tok_678 .

    $default  reduce using rule 70 (rule_insn64slot1_others_iterm)


state 31

   71 rule_insn64slot1_others_iterm: tok_683 .

    $default  reduce using rule 71 (rule_insn64slot1_others_iterm)


state 32

   72 rule_insn64slot1_others_iterm: tok_750 .

    $default  reduce using rule 72 (rule_insn64slot1_others_iterm)


state 33

   73 rule_insn64slot1_others_iterm: tok_755 .

    $default  reduce using rule 73 (rule_insn64slot1_others_iterm)


state 34

   74 rule_insn64slot1_others_iterm: tok_760 .

    $default  reduce using rule 74 (rule_insn64slot1_others_iterm)


state 35

   75 rule_insn64slot1_others_iterm: tok_765 .

    $default  reduce using rule 75 (rule_insn64slot1_others_iterm)


state 36

   81 rule_insn64slot1: rule_insn64slot1_mov .

    $default  reduce using rule 81 (rule_insn64slot1)


state 37

   83 rule_insn64slot1: rule_insn64slot1_nop .

    $default  reduce using rule 83 (rule_insn64slot1)


state 38

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm . rule_reg_acc tok_1066 rule_reg_all tok_1066 rule_reg_all

    tok_261  shift, and go to state 82
    tok_265  shift, and go to state 83
    tok_269  shift, and go to state 84
    tok_273  shift, and go to state 85

    rule_reg_acc  go to state 86


state 39

   82 rule_insn64slot1: rule_insn64slot1_others .

    $default  reduce using rule 82 (rule_insn64slot1)


state 40

    0 $accept: rule_insn64slot1 . $end

    $end  shift, and go to state 87


state 41

    1 rule_reg_all: tok_183 .

    $default  reduce using rule 1 (rule_reg_all)


state 42

    2 rule_reg_all: tok_187 .

    $default  reduce using rule 2 (rule_reg_all)


state 43

    3 rule_reg_all: tok_191 .

    $default  reduce using rule 3 (rule_reg_all)


state 44

    4 rule_reg_all: tok_195 .

    $default  reduce using rule 4 (rule_reg_all)


state 45

    5 rule_reg_all: tok_199 .

    $default  reduce using rule 5 (rule_reg_all)


state 46

    6 rule_reg_all: tok_203 .

    $default  reduce using rule 6 (rule_reg_all)


state 47

    7 rule_reg_all: tok_207 .

    $default  reduce using rule 7 (rule_reg_all)


state 48

    8 rule_reg_all: tok_211 .

    $default  reduce using rule 8 (rule_reg_all)


state 49

    9 rule_reg_all: tok_215 .

    $default  reduce using rule 9 (rule_reg_all)


state 50

   10 rule_reg_all: tok_219 .

    $default  reduce using rule 10 (rule_reg_all)


state 51

   11 rule_reg_all: tok_223 .

    $default  reduce using rule 11 (rule_reg_all)


state 52

   12 rule_reg_all: tok_228 .

    $default  reduce using rule 12 (rule_reg_all)


state 53

   13 rule_reg_all: tok_233 .

    $default  reduce using rule 13 (rule_reg_all)


state 54

   14 rule_reg_all: tok_238 .

    $default  reduce using rule 14 (rule_reg_all)


state 55

   15 rule_reg_all: tok_243 .

    $default  reduce using rule 15 (rule_reg_all)


state 56

   16 rule_reg_all: tok_248 .

    $default  reduce using rule 16 (rule_reg_all)


state 57

   17 rule_reg_all: tok_144 .

    $default  reduce using rule 17 (rule_reg_all)


state 58

   18 rule_reg_all: tok_148 .

    $default  reduce using rule 18 (rule_reg_all)


state 59

   19 rule_reg_all: tok_152 .

    $default  reduce using rule 19 (rule_reg_all)


state 60

   20 rule_reg_all: tok_156 .

    $default  reduce using rule 20 (rule_reg_all)


state 61

   21 rule_reg_all: tok_160 .

    $default  reduce using rule 21 (rule_reg_all)


state 62

   22 rule_reg_all: tok_164 .

    $default  reduce using rule 22 (rule_reg_all)


state 63

   23 rule_reg_all: tok_168 .

    $default  reduce using rule 23 (rule_reg_all)


state 64

   24 rule_reg_all: tok_172 .

    $default  reduce using rule 24 (rule_reg_all)


state 65

   25 rule_reg_all: tok_261 .

    $default  reduce using rule 25 (rule_reg_all)


state 66

   26 rule_reg_all: tok_265 .

    $default  reduce using rule 26 (rule_reg_all)


state 67

   27 rule_reg_all: tok_269 .

    $default  reduce using rule 27 (rule_reg_all)


state 68

   28 rule_reg_all: tok_273 .

    $default  reduce using rule 28 (rule_reg_all)


state 69

   29 rule_reg_all: tok_285 .

    $default  reduce using rule 29 (rule_reg_all)


state 70

   30 rule_reg_all: tok_289 .

    $default  reduce using rule 30 (rule_reg_all)


state 71

   31 rule_reg_all: tok_293 .

    $default  reduce using rule 31 (rule_reg_all)


state 72

   32 rule_reg_all: tok_297 .

    $default  reduce using rule 32 (rule_reg_all)


state 73

   33 rule_reg_all: tok_309 .

    $default  reduce using rule 33 (rule_reg_all)


state 74

   34 rule_reg_all: tok_313 .

    $default  reduce using rule 34 (rule_reg_all)


state 75

   35 rule_reg_all: tok_317 .

    $default  reduce using rule 35 (rule_reg_all)


state 76

   36 rule_reg_all: tok_321 .

    $default  reduce using rule 36 (rule_reg_all)


state 77

   37 rule_reg_all: tok_332 .

    $default  reduce using rule 37 (rule_reg_all)


state 78

   38 rule_reg_all: tok_336 .

    $default  reduce using rule 38 (rule_reg_all)


state 79

   39 rule_reg_all: tok_340 .

    $default  reduce using rule 39 (rule_reg_all)


state 80

   40 rule_reg_all: tok_344 .

    $default  reduce using rule 40 (rule_reg_all)


state 81

   41 rule_insn64slot1_mov: tok_706 rule_reg_all . tok_1066 rule_reg_all

    tok_1066  shift, and go to state 88


state 82

   76 rule_reg_acc: tok_261 .

    $default  reduce using rule 76 (rule_reg_acc)


state 83

   77 rule_reg_acc: tok_265 .

    $default  reduce using rule 77 (rule_reg_acc)


state 84

   78 rule_reg_acc: tok_269 .

    $default  reduce using rule 78 (rule_reg_acc)


state 85

   79 rule_reg_acc: tok_273 .

    $default  reduce using rule 79 (rule_reg_acc)


state 86

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm rule_reg_acc . tok_1066 rule_reg_all tok_1066 rule_reg_all

    tok_1066  shift, and go to state 89


state 87

    0 $accept: rule_insn64slot1 $end .

    $default  accept


state 88

   41 rule_insn64slot1_mov: tok_706 rule_reg_all tok_1066 . rule_reg_all

    tok_183  shift, and go to state 41
    tok_187  shift, and go to state 42
    tok_191  shift, and go to state 43
    tok_195  shift, and go to state 44
    tok_199  shift, and go to state 45
    tok_203  shift, and go to state 46
    tok_207  shift, and go to state 47
    tok_211  shift, and go to state 48
    tok_215  shift, and go to state 49
    tok_219  shift, and go to state 50
    tok_223  shift, and go to state 51
    tok_228  shift, and go to state 52
    tok_233  shift, and go to state 53
    tok_238  shift, and go to state 54
    tok_243  shift, and go to state 55
    tok_248  shift, and go to state 56
    tok_144  shift, and go to state 57
    tok_148  shift, and go to state 58
    tok_152  shift, and go to state 59
    tok_156  shift, and go to state 60
    tok_160  shift, and go to state 61
    tok_164  shift, and go to state 62
    tok_168  shift, and go to state 63
    tok_172  shift, and go to state 64
    tok_261  shift, and go to state 65
    tok_265  shift, and go to state 66
    tok_269  shift, and go to state 67
    tok_273  shift, and go to state 68
    tok_285  shift, and go to state 69
    tok_289  shift, and go to state 70
    tok_293  shift, and go to state 71
    tok_297  shift, and go to state 72
    tok_309  shift, and go to state 73
    tok_313  shift, and go to state 74
    tok_317  shift, and go to state 75
    tok_321  shift, and go to state 76
    tok_332  shift, and go to state 77
    tok_336  shift, and go to state 78
    tok_340  shift, and go to state 79
    tok_344  shift, and go to state 80

    rule_reg_all  go to state 90


state 89

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm rule_reg_acc tok_1066 . rule_reg_all tok_1066 rule_reg_all

    tok_183  shift, and go to state 41
    tok_187  shift, and go to state 42
    tok_191  shift, and go to state 43
    tok_195  shift, and go to state 44
    tok_199  shift, and go to state 45
    tok_203  shift, and go to state 46
    tok_207  shift, and go to state 47
    tok_211  shift, and go to state 48
    tok_215  shift, and go to state 49
    tok_219  shift, and go to state 50
    tok_223  shift, and go to state 51
    tok_228  shift, and go to state 52
    tok_233  shift, and go to state 53
    tok_238  shift, and go to state 54
    tok_243  shift, and go to state 55
    tok_248  shift, and go to state 56
    tok_144  shift, and go to state 57
    tok_148  shift, and go to state 58
    tok_152  shift, and go to state 59
    tok_156  shift, and go to state 60
    tok_160  shift, and go to state 61
    tok_164  shift, and go to state 62
    tok_168  shift, and go to state 63
    tok_172  shift, and go to state 64
    tok_261  shift, and go to state 65
    tok_265  shift, and go to state 66
    tok_269  shift, and go to state 67
    tok_273  shift, and go to state 68
    tok_285  shift, and go to state 69
    tok_289  shift, and go to state 70
    tok_293  shift, and go to state 71
    tok_297  shift, and go to state 72
    tok_309  shift, and go to state 73
    tok_313  shift, and go to state 74
    tok_317  shift, and go to state 75
    tok_321  shift, and go to state 76
    tok_332  shift, and go to state 77
    tok_336  shift, and go to state 78
    tok_340  shift, and go to state 79
    tok_344  shift, and go to state 80

    rule_reg_all  go to state 91


state 90

   41 rule_insn64slot1_mov: tok_706 rule_reg_all tok_1066 rule_reg_all .

    $default  reduce using rule 41 (rule_insn64slot1_mov)


state 91

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm rule_reg_acc tok_1066 rule_reg_all . tok_1066 rule_reg_all

    tok_1066  shift, and go to state 92


state 92

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm rule_reg_acc tok_1066 rule_reg_all tok_1066 . rule_reg_all

    tok_183  shift, and go to state 41
    tok_187  shift, and go to state 42
    tok_191  shift, and go to state 43
    tok_195  shift, and go to state 44
    tok_199  shift, and go to state 45
    tok_203  shift, and go to state 46
    tok_207  shift, and go to state 47
    tok_211  shift, and go to state 48
    tok_215  shift, and go to state 49
    tok_219  shift, and go to state 50
    tok_223  shift, and go to state 51
    tok_228  shift, and go to state 52
    tok_233  shift, and go to state 53
    tok_238  shift, and go to state 54
    tok_243  shift, and go to state 55
    tok_248  shift, and go to state 56
    tok_144  shift, and go to state 57
    tok_148  shift, and go to state 58
    tok_152  shift, and go to state 59
    tok_156  shift, and go to state 60
    tok_160  shift, and go to state 61
    tok_164  shift, and go to state 62
    tok_168  shift, and go to state 63
    tok_172  shift, and go to state 64
    tok_261  shift, and go to state 65
    tok_265  shift, and go to state 66
    tok_269  shift, and go to state 67
    tok_273  shift, and go to state 68
    tok_285  shift, and go to state 69
    tok_289  shift, and go to state 70
    tok_293  shift, and go to state 71
    tok_297  shift, and go to state 72
    tok_309  shift, and go to state 73
    tok_313  shift, and go to state 74
    tok_317  shift, and go to state 75
    tok_321  shift, and go to state 76
    tok_332  shift, and go to state 77
    tok_336  shift, and go to state 78
    tok_340  shift, and go to state 79
    tok_344  shift, and go to state 80

    rule_reg_all  go to state 93


state 93

   80 rule_insn64slot1_others: rule_insn64slot1_others_iterm rule_reg_acc tok_1066 rule_reg_all tok_1066 rule_reg_all .

    $default  reduce using rule 80 (rule_insn64slot1_others)
